# 3DmappingRobot

./: .gitignore  README.md
ProcessPCD/: CMakeLists.txt  MLS.cpp  calcDistance.cpp  cutData.cpp  detectObject.cpp  improveMap.cpp  improveMapSIMU.cpp  mergeMap.cpp  process_jetson_7_5.cpp  view2.cpp  view_half.cpp
ProcessPCD/old_main/: ProcessPCD.cpp  filterMap.cpp  measureWall.cpp  mergeMap_tang5_H3.cpp  sim_MLS.cpp
ProcessPCD/output/analyzeData/: 15_05_07_05_27_main_7_5_obj_L.txt  15_05_07_09_18_main_13_5_v03_2obj.txt  15_05_07_11_56_main_13_5_v04_2obj.txt
ProcessPCD/output/analyzeData/old/: 14_05_23_21_55_main_7_5_obj_L.txt  15_05_06_45_41_main_13_5_v03_2obj.txt  15_05_06_47_39_main_13_5_v04_2obj.txt  15_05_06_55_28_main_13_5_v03_2obj.txt  15_05_06_57_08_main_13_5_v03_2obj.txt
ProcessPCD/output/analyzeDataSimu/: 16_05_14_12_51_test_simu_1_5_cutX.txt  16_05_14_15_11_test_simu_1_5_cutX.txt  16_05_14_25_16_test_simu_1_5_cutX.txt
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/odometry_robot/: odom_publisher
devel/lib/pkgconfig/: gazebo_simu.pc  my_description.pc  odometry_robot.pc  scan_pointcloud.pc  serial_uart.pc
devel/lib/scan_pointcloud/: scan2pcl_node
devel/share/gazebo_simu/cmake/: gazebo_simuConfig.cmake
devel/share/my_description/cmake/: my_descriptionConfig.cmake
devel/share/odometry_robot/cmake/: odometry_robotConfig.cmake
devel/share/scan_pointcloud/cmake/: scan_pointcloudConfig.cmake
devel/share/serial_uart/cmake/: serial_uartConfig.cmake
src/gazebo_simu/: CMakeLists.txt  package.xml
src/gazebo_simu/launch/: view_world.launch
src/gazebo_simu/plugin/: base_plugin.xacro  imu_plugin.xacro  model_with_plugins.xacro  motor_plugin.xacro  rplidar_plugin.xacro  wheels_plugin.xacro
src/gazebo_simu/script/: diff_wheeled_robot_key.py
src/gazebo_simu/world/: lobbyFloor.world  lobbyFloorNoObj.world
src/gazebo_simu/world/lobbyFloor/: lobbyFloor.world
src/gazebo_simu/world/lobbyFloor/lobbyFloor/: model.config  model.sdf
src/gazebo_simu/world/old/: model.config  model.sdf  model.world  newWorld.world
src/my_description/: CMakeLists.txt  package.xml
src/my_description/config/: gazebo_1_5.rviz  gazebo_4_4.rviz  gazebo_4_4_2.rviz  my_model.rviz  my_model_jetson.rviz  playback_bagfile.rviz  scan2pcl.rviz  test_jetson_9_5.rviz
src/my_description/launch/: view_model_jetson.launch
src/my_description/meshes/: lidar.stl  rplidar2.dae
src/my_description/urdf/: base.xacro  model.xacro  parameters.xacro  pointcloud.xacro  rplidar.xacro  rplidar_test.xacro  utilities.xacro  wheels.xacro
src/odometry_robot/: CMakeLists.txt  package.xml
src/odometry_robot/src/: odometry.cpp
src/scan_pointcloud/: CMakeLists.txt  package.xml
src/scan_pointcloud/launch/: scan_to_pcl.launch
src/scan_pointcloud/outFromScan2Pcl/: output.pcd  outputwihtint.pcd
src/scan_pointcloud/src/: scan2pcl3.cpp
src/serial_uart/: CMakeLists.txt  package.xml
src/serial_uart/src/: uart.py
